cedar-lean/UnitTest/parser_tests/negative/unclosed_string.cedar
permit(principal, action, resource) when { "hello };
